Bug 228562: shift+forward should toggle html/plain text. r+sr=bienvenu